--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ bodyClass: "page-home"
     </div>
     <div class="row justify-content-center">
       <div class="col-auto">
-        <a class="button button-primary" href="{{ "services" | relative_url }}">Ver Todos</a>
+        <a class="button button-primary" href="{{ "services" | relative_url }}">Ver 'Servicios y Productos'</a>
       </div>
     </div>
   </div>
